tests/chainsaw/require-run-as-nonroot/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-no-run-as-nonroot
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
