tests/chainsaw/require-run-as-nonroot/good-pod-container-level.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-run-as-nonroot-container
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      runAsNonRoot: true
      allowPrivilegeEscalation: false
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
