tests/chainsaw/require-run-as-nonroot/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-run-as-nonroot
spec:
  securityContext:
    runAsNonRoot: true
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      allowPrivilegeEscalation: false
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
