tests/chainsaw/require-run-as-nonroot/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-run-as-nonroot
spec:
  steps:
  - name: create a bad pod without runAsNonRoot
    try:
    - create:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
  - name: create a good pod with runAsNonRoot at pod level
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-pod.yaml
  - name: create a good pod with runAsNonRoot at container level
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-pod-container-level.yaml
